test/corpus/create.txt
================================================================================
Create table
================================================================================

CREATE TABLE my_schema.my_table (id BIGINT NOT NULL PRIMARY KEY);

--------------------------------------------------------------------------------

(program
  (statement
    (create_table
      (keyword_create)
      (keyword_table)
      (object_reference
        schema: (identifier)
        name: (identifier))
      (column_definitions
        (column_definition
          name: (identifier)
          type: (bigint
            (keyword_bigint))
          (keyword_not)
          (keyword_null)
          (keyword_primary)
          (keyword_key))))))

================================================================================
Create table multiple columns
================================================================================

CREATE TABLE my_table (
  id BIGINT NOT NULL PRIMARY KEY,
  date DATE DEFAULT NULL ASC
);

--------------------------------------------------------------------------------

(program
  (statement
    (create_table
      (keyword_create)
      (keyword_table)
      (object_reference
        name: (identifier))
      (column_definitions
        (column_definition
          name: (identifier)
          type: (bigint
            (keyword_bigint))
          (keyword_not)
          (keyword_null)
          (keyword_primary)
          (keyword_key))
        (column_definition
          name: (identifier)
          type: (keyword_date)
          (keyword_default)
          (literal
            (keyword_null))
          (direction
            (keyword_asc)))))))

================================================================================
Create temp table
================================================================================

CREATE TEMP TABLE my_table (id BIGINT NOT NULL PRIMARY KEY);

--------------------------------------------------------------------------------

(program
  (statement
    (create_table
      (keyword_create)
      (keyword_temp)
      (keyword_table)
      (object_reference
        name: (identifier))
      (column_definitions
        (column_definition
          name: (identifier)
          type: (bigint
            (keyword_bigint))
          (keyword_not)
          (keyword_null)
          (keyword_primary)
          (keyword_key))))))

================================================================================
Create table with constraint
================================================================================

CREATE TABLE my_table (
  host CHAR(50) NOT NULL,
  created_date DATE NOT NULL,
  CONSTRAINT pk PRIMARY KEY (host ASC, created_date DESC)
);

--------------------------------------------------------------------------------

(program
  (statement
    (create_table
      (keyword_create)
      (keyword_table)
      (object_reference
        name: (identifier))
      (column_definitions
        (column_definition
          name: (identifier)
          type: (char
            (keyword_char)
            size: (literal))
          (keyword_not)
          (keyword_null))
        (column_definition
          name: (identifier)
          type: (keyword_date)
          (keyword_not)
          (keyword_null))
        (constraints
          (constraint
            (keyword_constraint)
            name: (identifier)
            (keyword_primary)
            (keyword_key)
            (ordered_columns
              (column
                name: (identifier)
                (direction
                  (keyword_asc)))
              (column
                name: (identifier)
                (direction
                  (keyword_desc))))))))))

================================================================================
Create table with constraint on multiple columns
================================================================================

CREATE TABLE my_table (
  host CHAR(50) NOT NULL,
  created_date DATE NOT NULL,
  random FLOAT DEFAULT RAND(),
  random TEXT DEFAULT 'test',
  with_comment TEXT COMMENT 'this column has a comment',
  with_comment_and_constraint TEXT DEFAULT 'test' COMMENT 'this column also has a comment',
  KEY `idx` (`host`, `created_date`),
  UNIQUE KEY `unique_idx` (`host`,`with_comment`)
);

--------------------------------------------------------------------------------

(program
  (statement
    (create_table
      (keyword_create)
      (keyword_table)
      (object_reference
        name: (identifier))
      (column_definitions
        (column_definition
          name: (identifier)
          type: (char
            (keyword_char)
            size: (literal))
          (keyword_not)
          (keyword_null))
        (column_definition
          name: (identifier)
          type: (keyword_date)
          (keyword_not)
          (keyword_null))
        (column_definition
          name: (identifier)
          type: (float
            (keyword_float))
          (keyword_default)
          (invocation
            (object_reference
              name: (identifier))))
        (column_definition
          name: (identifier)
          type: (keyword_text)
          (keyword_default)
          (literal))
        (column_definition
          name: (identifier)
          type: (keyword_text)
          (keyword_comment)
          (literal))
        (column_definition
          name: (identifier)
          type: (keyword_text)
          (keyword_default)
          (literal)
          (keyword_comment)
          (literal))
        (constraints
          (constraint
            (keyword_key)
            name: (identifier)
            (ordered_columns
              (column
                name: (identifier))
              (column
                name: (identifier))))
          (constraint
            (keyword_unique)
            (keyword_key)
            name: (identifier)
            (ordered_columns
              (column
                name: (identifier))
              (column
                name: (identifier)))))))))

================================================================================
Create table if not exists
================================================================================

CREATE TABLE IF NOT EXISTS `addresses` (
  `id` bigint(20) NOT NULL AUTO_INCREMENT
);

--------------------------------------------------------------------------------

(program
  (statement
    (create_table
      (keyword_create)
      (keyword_table)
      (keyword_if)
      (keyword_not)
      (keyword_exists)
      (object_reference
        name: (identifier))
      (column_definitions
        (column_definition
          name: (identifier)
          type: (bigint
            (keyword_bigint)
            size: (literal))
          (keyword_not)
          (keyword_null)
          (keyword_auto_increment))))))

================================================================================
Create table with unsigned zerofill types
================================================================================

CREATE TABLE `addresses` (
  `id` bigint(20) UNSIGNED ZEROFILL,
  `id2` int4(20) ZEROFILL,
  `id3` UNSIGNED tinyint(20),
  `id4` mediumint(20) UNSIGNED,
  `id5` float(20, 3) UNSIGNED,
  `id6` double(20,3) UNSIGNED
);

--------------------------------------------------------------------------------

(program
  (statement
    (create_table
      (keyword_create)
      (keyword_table)
      (object_reference
        name: (identifier))
      (column_definitions
        (column_definition
          name: (identifier)
          type: (bigint
            (keyword_bigint)
            size: (literal)
            (keyword_unsigned)
            (keyword_zerofill)))
        (column_definition
          name: (identifier)
          type: (int
            (keyword_int)
            size: (literal)
            (keyword_zerofill)))
        (column_definition
          name: (identifier)
          type: (tinyint
            (keyword_unsigned)
            (keyword_tinyint)
            size: (literal)))
        (column_definition
          name: (identifier)
          type: (mediumint
            (keyword_mediumint)
            size: (literal)
            (keyword_unsigned)))
        (column_definition
          name: (identifier)
          type: (float
            (keyword_float)
            precision: (literal)
            scale: (literal)
            (keyword_unsigned)))
        (column_definition
          name: (identifier)
          type: (double
            (keyword_double)
            precision: (literal)
            scale: (literal)
            (keyword_unsigned)))))))

================================================================================
Create table with auto increment
================================================================================

CREATE TABLE IF NOT EXISTS `addresses` (
  `id` bigint(20) NOT NULL AUTO_INCREMENT,
  PRIMARY KEY (`id`),
  KEY `addresses_s_id_index` (`s_id`)
);

--------------------------------------------------------------------------------

(program
  (statement
    (create_table
      (keyword_create)
      (keyword_table)
      (keyword_if)
      (keyword_not)
      (keyword_exists)
      (object_reference
        name: (identifier))
      (column_definitions
        (column_definition
          name: (identifier)
          type: (bigint
            (keyword_bigint)
            size: (literal))
          (keyword_not)
          (keyword_null)
          (keyword_auto_increment))
        (constraints
          (constraint
            (keyword_primary)
            (keyword_key)
            (ordered_columns
              (column
                name: (identifier))))
          (constraint
            (keyword_key)
            name: (identifier)
            (ordered_columns
              (column
                name: (identifier)))))))))

================================================================================
Create table with multiple constraints
================================================================================

CREATE TABLE IF NOT EXISTS `addresses` (
  `id` bigint(20) NOT NULL AUTO_INCREMENT,
  `s_id` bigint(20) DEFAULT NULL,
  `first_name` varchar(255) DEFAULT NULL,
  `updated_at` datetime DEFAULT NULL,
  PRIMARY KEY (`id`),
  KEY `addresses_s_id_index` (`s_id`),
  KEY `index_addresses_on_updated_at` (`updated_at`),
  KEY `index_addresses_on_s_id_and_id` (`s_id`, `id`)
);

--------------------------------------------------------------------------------

(program
  (statement
    (create_table
      (keyword_create)
      (keyword_table)
      (keyword_if)
      (keyword_not)
      (keyword_exists)
      (object_reference
        name: (identifier))
      (column_definitions
        (column_definition
          name: (identifier)
          type: (bigint
            (keyword_bigint)
            size: (literal))
          (keyword_not)
          (keyword_null)
          (keyword_auto_increment))
        (column_definition
          name: (identifier)
          type: (bigint
            (keyword_bigint)
            size: (literal))
          (keyword_default)
          (literal
            (keyword_null)))
        (column_definition
          name: (identifier)
          type: (varchar
            (keyword_varchar)
            size: (literal))
          (keyword_default)
          (literal
            (keyword_null)))
        (column_definition
          name: (identifier)
          type: (keyword_datetime)
          (keyword_default)
          (literal
            (keyword_null)))
        (constraints
          (constraint
            (keyword_primary)
            (keyword_key)
            (ordered_columns
              (column
                name: (identifier))))
          (constraint
            (keyword_key)
            name: (identifier)
            (ordered_columns
              (column
                name: (identifier))))
          (constraint
            (keyword_key)
            name: (identifier)
            (ordered_columns
              (column
                name: (identifier))))
          (constraint
            (keyword_key)
            name: (identifier)
            (ordered_columns
              (column
                name: (identifier))
              (column
                name: (identifier)))))))))

================================================================================
Debugging
================================================================================

CREATE TABLE IF NOT EXISTS `addresses` (
  `id` bigint(20) NOT NULL AUTO_INCREMENT,
  `s_id` bigint(20) DEFAULT NULL,
  `first_name` varchar(255) DEFAULT NULL
);

--------------------------------------------------------------------------------

(program
  (statement
    (create_table
      (keyword_create)
      (keyword_table)
      (keyword_if)
      (keyword_not)
      (keyword_exists)
      (object_reference
        name: (identifier))
      (column_definitions
        (column_definition
          name: (identifier)
          type: (bigint
            (keyword_bigint)
            size: (literal))
          (keyword_not)
          (keyword_null)
          (keyword_auto_increment))
        (column_definition
          name: (identifier)
          type: (bigint
            (keyword_bigint)
            size: (literal))
          (keyword_default)
          (literal
            (keyword_null)))
        (column_definition
          name: (identifier)
          type: (varchar
            (keyword_varchar)
            size: (literal))
          (keyword_default)
          (literal
            (keyword_null)))))))

================================================================================
Create table with table options
================================================================================

CREATE TABLE my_table (
  id BIGINT(20) NOT NULL,
  date DATE DEFAULT NULL ASC
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 ROW_FORMAT=DYNAMIC;

--------------------------------------------------------------------------------

(program
  (statement
    (create_table
      (keyword_create)
      (keyword_table)
      (object_reference
        name: (identifier))
      (column_definitions
        (column_definition
          name: (identifier)
          type: (bigint
            (keyword_bigint)
            size: (literal))
          (keyword_not)
          (keyword_null))
        (column_definition
          name: (identifier)
          type: (keyword_date)
          (keyword_default)
          (literal
            (keyword_null))
          (direction
            (keyword_asc))))
      (table_option
        name: (keyword_engine)
        value: (identifier))
      (table_option
        name: (keyword_default))
      (table_option
        name: (identifier)
        value: (identifier))
      (table_option
        name: (identifier)
        value: (identifier)))))

================================================================================
Create view
================================================================================

CREATE VIEW my_view AS
SELECT * FROM my_table;

--------------------------------------------------------------------------------

(program
  (statement
    (create_view
      (keyword_create)
      (keyword_view)
      (object_reference
        name: (identifier))
      (keyword_as)
      (create_query
        (select
          (keyword_select)
          (select_expression
            (term
              value: (all_fields))))
        (from
          (keyword_from)
          (relation
            (object_reference
              name: (identifier))))))))

================================================================================
Create or replace view
================================================================================

CREATE OR REPLACE VIEW my_view AS
SELECT * FROM my_table;

--------------------------------------------------------------------------------

(program
  (statement
    (create_view
      (keyword_create)
      (keyword_or)
      (keyword_replace)
      (keyword_view)
      (object_reference
        name: (identifier))
      (keyword_as)
      (create_query
        (select
          (keyword_select)
          (select_expression
            (term
              value: (all_fields))))
        (from
          (keyword_from)
          (relation
            (object_reference
              name: (identifier))))))))

================================================================================
Create temp view
================================================================================

CREATE TEMPORARY VIEW foo AS SELECT 1;
CREATE TEMP VIEW foo AS SELECT 1;

--------------------------------------------------------------------------------

(program
  (statement
    (create_view
      (keyword_create)
      (keyword_temporary)
      (keyword_view)
      (object_reference
        (identifier))
      (keyword_as)
      (create_query
        (select
          (keyword_select)
          (select_expression
            (term
              (literal)))))))
  (statement
    (create_view
      (keyword_create)
      (keyword_temp)
      (keyword_view)
      (object_reference
        (identifier))
      (keyword_as)
      (create_query
        (select
          (keyword_select)
          (select_expression
            (term
              (literal))))))))

================================================================================
Create view with columns
================================================================================

CREATE VIEW foo(a, b) AS SELECT 1 a, 2 b;

--------------------------------------------------------------------------------

(program
  (statement
    (create_view
      (keyword_create)
      (keyword_view)
      (object_reference
        (identifier))
      (identifier)
      (identifier)
      (keyword_as)
      (create_query
        (select
          (keyword_select)
          (select_expression
            (term
              (literal)
              (identifier))
            (term
              (literal)
              (identifier))))))))

================================================================================
Create view with check option
================================================================================

CREATE VIEW foo AS SELECT 1 WITH CHECK OPTION;
CREATE VIEW foo AS SELECT 1 WITH LOCAL CHECK OPTION;
CREATE VIEW foo AS SELECT 1 WITH CASCADED CHECK OPTION;
--------------------------------------------------------------------------------

(program
  (statement
    (create_view
      (keyword_create)
      (keyword_view)
      (object_reference
        (identifier))
      (keyword_as)
      (create_query
        (select
          (keyword_select)
          (select_expression
            (term
              (literal)))))
      (keyword_with)
      (keyword_check)
      (keyword_option)))
  (statement
    (create_view
      (keyword_create)
      (keyword_view)
      (object_reference
        (identifier))
      (keyword_as)
      (create_query
        (select
          (keyword_select)
          (select_expression
            (term
              (literal)))))
      (keyword_with)
      (keyword_local)
      (keyword_check)
      (keyword_option)))
  (statement
    (create_view
      (keyword_create)
      (keyword_view)
      (object_reference
        (identifier))
      (keyword_as)
      (create_query
        (select
          (keyword_select)
          (select_expression
            (term
              (literal)))))
      (keyword_with)
      (keyword_cascaded)
      (keyword_check)
      (keyword_option))))

================================================================================
Create matview
================================================================================

CREATE MATERIALIZED VIEW my_view AS
SELECT * FROM my_table
WITH NO DATA;

--------------------------------------------------------------------------------

(program
  (statement
    (create_materialized_view
      (keyword_create)
      (keyword_materialized)
      (keyword_view)
      (object_reference
        name: (identifier))
      (keyword_as)
      (create_query
        (select
          (keyword_select)
          (select_expression
            (term
              value: (all_fields))))
        (from
          (keyword_from)
          (relation
            (object_reference
              name: (identifier)))))
      (keyword_with)
      (keyword_no)
      (keyword_data))))

================================================================================
Create matview with ambiguous grammar
================================================================================

CREATE MATERIALIZED VIEW my_view AS
SELECT * FROM my_table
WITH NO DATA

--------------------------------------------------------------------------------

(program
  (statement
    (create_materialized_view
      (keyword_create)
      (keyword_materialized)
      (keyword_view)
      (object_reference
        name: (identifier))
      (keyword_as)
      (create_query
        (select
          (keyword_select)
          (select_expression
            (term
              value: (all_fields))))
        (from
          (keyword_from)
          (relation
            (object_reference
              name: (identifier)))))
      (keyword_with)
      (keyword_no)
      (keyword_data))))

================================================================================
Create table with all types
================================================================================

CREATE TABLE type_test (
  a_bool BOOLEAN,
  a_bit BIT,
  a_bit2 BIT(2),
  a_bit3 BIT VARYING(2),
  a_binary BINARY,
  a_varbinary VARBINARY,
  a_image IMAGE,
  a_smallser SMALLSERIAL,
  a_serial SERIAL,
  a_bigser BIGSERIAL,
  an_int INT,
  an_integer INTEGER,
  a_bigint BIGINT,
  a_decimal DECIMAL,
  a_sized_decimal DECIMAL (8),
  a_sized_decimal_with_scale DECIMAL (8, 4),
  a_numeric NUMERIC,
  a_sized_numeric NUMERIC (8),
  a_sized_numeric_with_scale NUMERIC (8, 4),
  a_real REAL,
  a_double_precision DOUBLE PRECISION,
  a_money MONEY,
  a_smallmoney SMALLMONEY,
  a_char CHAR,
  a_nchar NCHAR,
  a_nchar_precision NCHAR(8),
  a_character CHARACTER,
  a_sized_char CHAR (10),
  a_varchar VARCHAR (10),
  a_varchar2 VARCHAR2 (10),
  a_nvarchar NVARCHAR,
  a_nvarchar_precision NVARCHAR (10),
  a_character_varying CHARACTER VARYING (10),
  a_text TEXT,
  a_json JSON,
  a_jsonb JSONB,
  an_xml XML,
  a_bytea BYTEA,
  a_enum ENUM('one','two','three'),
  a_date DATE,
  a_datetime DATETIME,
  a_datetime2 DATETIME2,
  a_datetimeoffset DATETIMEOFFSET,
  a_smalldatetime SMALLDATETIME,
  a_time TIME,
  a_timestamp TIMESTAMP,
  a_verbose_timestamp TIMESTAMP WITHOUT TIME ZONE,
  a_tstz TIMESTAMPTZ,
  a_date_with_default_ts DATETIME DEFAULT CURRENT_TIMESTAMP,
  a_verbose_tstz TIMESTAMP WITH TIME ZONE,
  a_geometry GEOMETRY,
  a_geography GEOGRAPHY,
  a_box2d BOX2D,
  a_box3d BOX3D,
  a_uuid UUID
);

--------------------------------------------------------------------------------
